--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 significantly boosted our user engagement. Highly recommend!"
               </p>
               <h4>Henrik Velnom</h4>
-              <span>Team Lead of UI/UX, Brand Cloud Inc, Japan</span>
+              <span>Head of UI/UX Design Team, Brand Cloud Inc, Japan</span>
             </div>
           </div>
         </div>
