--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@
         <div class="container">
           <h2>Projects</h2>
           <div class="Project-grid">
-            <div class="project-card">
+            <a
+              class="project-card"
+              href="https://www.behance.net/gallery/197164257/Ride-Safe-App"
+            >
               <img src="./ride.png" alt="" />
               <div class="project-content">
                 <h3>Ride Safe App</h3>
@@ -239,8 +242,11 @@
                   <span class="tech-tag">Design System</span>
                 </div>
               </div>
-            </div>
-            <div class="project-card">
+            </a>
+            <a
+              class="project-card"
+              href="https://www.behance.net/gallery/189612425/CGDIGITAL-E-Commerce-Application-Case-Study"
+            >
               <img src="./cg.png" alt="" />
               <div class="project-content">
                 <h3>CG|DIGITAL E-Commerce Application</h3>
@@ -258,8 +264,11 @@
                   <span class="tech-tag">Usability Testing</span>
                 </div>
               </div>
-            </div>
-            <div class="project-card">
+            </a>
+            <a
+              class="project-card"
+              href="https://www.behance.net/gallery/175974879/ORGANIC-Foods-Groceries-Delivery-App"
+            >
               <img src="./Organic.png" alt="" />
               <div class="project-content">
                 <h3>ORGANIC- Foods & Groceries Delivery App</h3>
@@ -276,8 +285,8 @@
                   <span class="tech-tag">Design System</span>
                 </div>
               </div>
-            </div>
-            <div class="project-card">
+            </a>
+            <a class="project-card" href="https://brandcloud.co.jp/">
               <img src="./USA.png" alt="" />
               <div class="project-content">
                 <h3>Brand Cloud Inc Website (Redesign)</h3>
@@ -298,8 +307,11 @@
                   <span class="tech-tag">JavaScript</span>
                 </div>
               </div>
-            </div>
-            <div class="project-card">
+            </a>
+            <a
+              class="project-card"
+              href="https://tahminaakter607.github.io/T-s-Atelier-E-Commerce-Website/"
+            >
               <img src="./ta.png" alt="" />
               <div class="project-content">
                 <h3>T's Atelier E-Commerce Website</h3>
@@ -316,8 +328,8 @@
                   <span class="tech-tag">JavaScript</span>
                 </div>
               </div>
-            </div>
-            <div class="project-card">
+            </a>
+            <a class="project-card" href="">
               <img src="./nft.png" alt="" />
               <div class="project-content">
                 <h3>Tenime - NFT Art Application</h3>
@@ -335,7 +347,7 @@
                   <span class="tech-tag">Design System</span>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </section>
